--- a/docs/interni/norme_di_progetto/norme_di_progetto.tex
+++ b/docs/interni/norme_di_progetto/norme_di_progetto.tex
@@ -8,7 +8,7 @@
 \settitolo{Norme di progetto}
 \setprogetto{ShopChain}
 \setcommittenti{SyncLab}
-\setredattori{Elia Scandaletti \\ Raffaele Oliviero}
+\setredattori{Elia Scandaletti \\ Raffaele Oliviero \\ Giovanni Cocco}
 \setdestuso{interno}
 \setdescrizione{
 Questo documento contiene le procedure, gli strumenti e i criteri di qualità che verranno usati nel progetto. 
@@ -21,6 +21,7 @@ Questo documento contiene le procedure, gli strumenti e i criteri di qualità ch
 \addversione{0.0.4}{09/01/2022}{Raffaele Oliviero}{Redazione}{Ristrutturazione documento}
 \addversione{0.0.5}{09/01/2022}{Raffaele Oliviero}{Redazione}{Stesura \ref{documentazione-documenti-piano-di-qualifica} e \ref{verifica-e-validazione}}
 \addversione{0.0.6}{16/01/2022}{Elia Scandaletti}{Redazione}{Adeguamento di \ref{verifica-e-validazione} a decisioni collettive}
+\addversione{0.0.7}{04/02/2022}{Giovanni Cocco}{Redazione}{Stesure di \ref{revisioni-di-avanzamento-interne}}
 
 
 \begin{document}
@@ -267,5 +268,15 @@ Ogni issue è legato a una milestone.
 Un issue può essere diviso in più parti utilizzando una task list.
 
 Ogni sotto-task può essere trasformata in un issue. Quest'ultimo dovrà essere collegato alla stessa milestone dell'issue padre.
+
+\subsection{Revisioni di avanzamento interne}\label{revisioni-di-avanzamento-interne}
+Al fine di verificare periodicamente l'effettivo avanzamento delle varie task e meglio coordinare il gruppo è previsto di trovarsi sul canale Discord del gruppo settimanalmente.\\
+
+Questo incontro avverrà ogni \textbf{Mercoledì alle 15.00}.\\
+
+In caso un componente non possa presentarsi dovrà presentare un resoconto scritto del suo stato di avanzamento ed eventuali criticità riscontrate.\\
+
+Questo resoconto va consegnato \textbf{prima del meeting} in modo che sia possibile discutere con i presenti anche della parte di lavoro svolta dagli assenti.
+Gli assenti rimarranno aggiornati sullo stato di avanzamento consultando i verbali redatti in occasione di ogni incontro.
 
 \end{document}
